<resources>
    <string name="app_name">PlanA</string>
    <string name="sign_in">Sign in</string>
    <string name="plana">PlanA</string>
    <string name="sign_up">Sign up</string>
    <string name="account_exist">Already have an account?</string>
    <string name="account_not_exist">Do not have an account yet?</string>
    <string name="user_name">user</string>
    <string name="list1">View my routes</string>
    <string name="list2">Saved cities</string>
    <string name="list3">View my budget</string>


    <string name="constraint_layout">Constraint Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="password_rule">A valid password has at least 8 characters and includes at lease one uppercase letter, one lowercase letter, one number and one special character.</string>
    <string name="next">Next</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ev_chargers">EV chargers</string>
    <string name="map_fragment_button">Map</string>
    <string name="connector_list">Connectors</string>
    <string name="plana_logo">PlanA_logo</string>
    <string name="my_car_is_an_ev">My car is an EV</string>


    <string-array name="connectors">
        <item>J1772</item>
        <item>SAE CCS</item>
        <item>CHAdeMO</item>
        <item>Tesla</item>
    </string-array>

    <string-array name="manufacturers">
        <item>Tesla</item>
        <item>Porsche</item>
        <item>Lucid</item>
        <item>Hyundai</item>
        <item>Audi</item>
        <item>Rivian</item>
        <item>BMW</item>
        <item>Kia</item>
        <item>Chevrolet</item>
        <item>Volkswagen</item>
        <item>Nissan</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="search_hint">Where are you going to?</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_to_plana">Welcome to PlanA</string>
    <string name="user_headshot">User Headshot</string>
    <string name="travel_budget">Travel Budget</string>
    <string name="transportation">Transportation</string>
    <string name="amount">Amount</string>
    <string name="flight">Flight</string>
    <string name="accommodation">Accommodation</string>
    <string name="food">Food</string>
    <string name="plan_your_budget">Plan your budget</string>
    <string name="apply">Apply</string>
</resources>