<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/routes"
        android:title="@string/list1"
        android:icon="@drawable/ic_baseline_pin_drop_24"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/cities"
        android:title="@string/list2"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/budget"
        android:title="@string/list3"
        android:icon="@drawable/ic_baseline_attach_money_24"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/signOut"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_baseline_power_settings_new_24"
        app:showAsAction="ifRoom|withText"/>
</menu>