<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="#1e3a8a"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/textView"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/editTextEmail"
        android:layout_alignStart="@id/editTextEmail"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/editTextRePassword"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/editTextPassword"
        android:layout_alignStart="@id/editTextEmail"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextRePassword"
        android:layout_toStartOf="@id/goToSignUP"
        android:layout_marginTop="15dp"
        android:text="@string/account_not_exist"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/goToSignUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextRePassword"
        android:layout_alignEnd="@id/editTextEmail"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:textColor="#0000EE"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/haveAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="#60a5fa"
        android:text="@string/sign_in"
        android:textSize="15sp" />


</RelativeLayout>