<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/budget_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_budget"
                android:textColor="#1e3a8a"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/budget_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_your_budget"
                android:textSize="17sp" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginBottom="25dp"
                android:padding="6dp" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:id="@+id/txt_flight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/flight"
                        app:layout_constraintVertical_bias="0.128" />

                    <EditText
                        android:id="@+id/edt_flight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/amount"
                        android:inputType="number"
                        tools:layout_editor_absoluteX="121dp"
                        tools:layout_editor_absoluteY="133dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txt_transportation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/transportation"
                        app:layout_constraintVertical_bias="0.128" />

                    <EditText
                        android:id="@+id/edt_transportation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/amount"
                        android:inputType="number"
                        tools:layout_editor_absoluteX="121dp"
                        tools:layout_editor_absoluteY="133dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txt_accommodation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/accommodation"
                        app:layout_constraintVertical_bias="0.128" />

                    <EditText
                        android:id="@+id/edt_accommodation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/amount"
                        android:inputType="number"
                        tools:layout_editor_absoluteX="121dp"
                        tools:layout_editor_absoluteY="133dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txt_food"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/food"
                        app:layout_constraintVertical_bias="0.128" />

                    <EditText
                        android:id="@+id/edt_food"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/amount"
                        android:inputType="number"
                        tools:layout_editor_absoluteX="121dp"
                        tools:layout_editor_absoluteY="133dp" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/apply" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>